istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3  
kind: Gateway  
metadata:  
  name: best-bin-service-gateway  
spec:  
  selector:  
    istio: ingressgateway # use Istio default gateway implementation  
  servers:  
  - port:  
      name: http  
      number: 80  
      protocol: HTTP  
    hosts:  
    - '*'  
---
apiVersion: networking.istio.io/v1alpha3  
kind: VirtualService  
metadata:  
  name: best-bin-service  
spec:  
  hosts:  
  - "*"  
  gateways:  
  - best-bin-gateway  
  http:  
  - match:  
    - uri:  
        prefix: /  
    route:  
    - destination:  
        port:  
          number: 8000  
        host: best-bin-service
